[gd_scene load_steps=10 format=2]

[ext_resource path="res://Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://Planter.tscn" type="PackedScene" id=3]
[ext_resource path="res://Button.gd" type="Script" id=4]
[ext_resource path="res://VBoxContainer.gd" type="Script" id=5]
[ext_resource path="res://Timer.gd" type="Script" id=6]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 0, 0, 64, 0, 64, 64, 0, 64 )

[sub_resource type="ConvexPolygonShape2D" id=2]
points = PoolVector2Array( 0, 0, 64, 0, 64, 64, 0, 64 )

[sub_resource type="TileSet" id=3]
0/name = "icon.png 0"
0/texture = ExtResource( 2 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 64, 64 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 2 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0

[node name="Farm" type="Node2D"]

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 272, 160 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 3 )
format = 1
tile_data = PoolIntArray( 131078, 0, 0 )

[node name="Planter" parent="." instance=ExtResource( 3 )]
position = Vector2( 416, 160 )

[node name="PlantMenu" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="Button" type="Button" parent="PlantMenu"]
margin_left = -22.0
margin_top = -10.0
margin_right = 22.0
margin_bottom = 10.0
text = "Plant"
script = ExtResource( 4 )

[node name="HBoxContainer" type="HBoxContainer" parent="PlantMenu"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 5 )

[node name="VBoxContainer" type="VBoxContainer" parent="PlantMenu/HBoxContainer"]
margin_right = 35.0
margin_bottom = 116.0

[node name="Exit" type="Button" parent="PlantMenu/HBoxContainer/VBoxContainer"]
margin_right = 35.0
margin_bottom = 20.0
text = "Exit"

[node name="Button2" type="Button" parent="PlantMenu/HBoxContainer/VBoxContainer"]
margin_top = 24.0
margin_right = 35.0
margin_bottom = 44.0

[node name="Button3" type="Button" parent="PlantMenu/HBoxContainer/VBoxContainer"]
margin_top = 48.0
margin_right = 35.0
margin_bottom = 68.0

[node name="Button4" type="Button" parent="PlantMenu/HBoxContainer/VBoxContainer"]
margin_top = 72.0
margin_right = 35.0
margin_bottom = 92.0

[node name="Button5" type="Button" parent="PlantMenu/HBoxContainer/VBoxContainer"]
margin_top = 96.0
margin_right = 35.0
margin_bottom = 116.0

[node name="VBoxContainer2" type="VBoxContainer" parent="PlantMenu/HBoxContainer"]
margin_left = 39.0
margin_right = 104.0
margin_bottom = 116.0

[node name="Planter1" type="Button" parent="PlantMenu/HBoxContainer/VBoxContainer2"]
margin_right = 65.0
margin_bottom = 20.0
text = "Planter1"

[node name="Planter2" type="Button" parent="PlantMenu/HBoxContainer/VBoxContainer2"]
margin_top = 24.0
margin_right = 65.0
margin_bottom = 44.0

[node name="Planter3" type="Button" parent="PlantMenu/HBoxContainer/VBoxContainer2"]
margin_top = 48.0
margin_right = 65.0
margin_bottom = 68.0

[node name="Planter4" type="Button" parent="PlantMenu/HBoxContainer/VBoxContainer2"]
margin_top = 72.0
margin_right = 65.0
margin_bottom = 92.0

[node name="Planter5" type="Button" parent="PlantMenu/HBoxContainer/VBoxContainer2"]
margin_top = 96.0
margin_right = 65.0
margin_bottom = 116.0

[node name="Timer" type="Timer" parent="."]
script = ExtResource( 6 )
[connection signal="mouse_entered" from="Planter" to="PlantMenu/Button" method="_on_Planter_mouse_entered"]
[connection signal="mouse_exited" from="Planter" to="PlantMenu/Button" method="_on_Planter_mouse_exited"]
[connection signal="pressed" from="PlantMenu/Button" to="PlantMenu/Button" method="_on_Button_pressed"]
[connection signal="pressed" from="PlantMenu/Button" to="PlantMenu/HBoxContainer" method="_on_Button_pressed"]
[connection signal="pressed" from="PlantMenu/HBoxContainer/VBoxContainer/Exit" to="PlantMenu/Button" method="_on_Exit_pressed"]
[connection signal="pressed" from="PlantMenu/HBoxContainer/VBoxContainer/Exit" to="PlantMenu/HBoxContainer" method="_on_Exit_pressed"]
[connection signal="timeout" from="Timer" to="Timer" method="_on_Timer_timeout"]
